--- a/public/css/register.css
+++ b/public/css/register.css
@@ -3,6 +3,14 @@
     padding: 0px;    
     box-sizing: border-box;
 }
+h3{
+    font-size: 24px;
+}
+
+p{
+    font-size: 12px;
+    
+}
 
 body{
     position: relative;
